Fix - box overlay issue when typing on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,10 +84,6 @@ nav ul li a {
 
 }
 
-#frame {
-    width: 537px;
-}
-
 .row {
     display: -webkit-flex;
     display: flex;
@@ -180,7 +176,8 @@ div h3 {
     /* border: 1px solid black; */
     /* overflow-y: scroll; */
     overflow-y: scroll;
-   
+    position: absolute;
+    right: 55px;
 }
 
 /* Scroll bar */
